--- a/src/components/navigation/Navigation.scss
+++ b/src/components/navigation/Navigation.scss
@@ -8,6 +8,10 @@
       @apply h-1 w-full duration-200 ease-in-out;
     }
 
+    .burgerLine-thick {
+      @apply h-[6px] w-full duration-200 ease-in-out;
+    }
+
     .floating-menu-list {
       @apply mx-auto flex list-none flex-col justify-between;
     }
