--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,9 +21,11 @@
 
 body {
   background-color: #262336;
-background-image: url("/images/texture.svg");
-background-repeat: repeat;
-background-attachment: fixed;
+  background-image: url("/images/texture.svg");
+  background-repeat: repeat;
+  background-attachment: fixed;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 @layer utilities {
